plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
     // ✅ github action 
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    // ✅ MVC 기본(Controller/DispatcherServlet)
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // ✅ Security / JPA / Validation
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.flywaydb:flyway-core'

    implementation 'org.flywaydb:flyway-database-postgresql'
    // ✅ WebClient 사용 시 필요(reactor-netty 기반)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'org.postgresql:postgresql'

    // ✅ OpenAPI / Swagger UI (충돌 최소화 목적)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    // ✅ JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    def lombokVersion = "1.18.34"
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    implementation platform("com.fasterxml.jackson:jackson-bom:2.17.2")
    implementation "com.fasterxml.jackson.core:jackson-databind"
    implementation "com.fasterxml.jackson.core:jackson-core"
    implementation "com.fasterxml.jackson.core:jackson-annotations"

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
configurations.configureEach {
    exclude group: "tools.jackson.core"
    exclude group: "tools.jackson.databind"
    exclude group: "tools.jackson.dataformat"
    exclude group: "tools.jackson.datatype"
    exclude group: "tools.jackson.module"
}
